--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,96 +1,106 @@
 # .github/workflows/ci.yml
 
 # 워크플로우 이름
-name: Autonomous Car CI (with Lint Log)
+name: My Robot CI
 
 # 워크플로우 트리거 조건
 on:
-  push:
-    branches: [ sh-dev ] # 개발용 브랜치 (팀마다 다를 수 있음)
+  # main 브랜치로 향하는 풀 리퀘스트가 생성되거나 업데이트될 때 실행
   pull_request:
-    branches: [ main ] # 메인 브랜치
+    branches: [ main ]
+  # (선택 사항) 개발 브랜치에 직접 push할 때도 실행하고 싶다면 주석을 해제하세요.
+  # push:
+  #   branches: [ develop ]
 
 jobs:
-  # 1. 린팅 작업: 코드 스타일을 검사하고 로그 파일을 생성합니다.
+  # ====================================================================
+  # 잡 1: 린팅 (코드 스타일 검사)
+  # ====================================================================
   linting:
+    name: Code Style Check (Pylint)
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
+      - name: 1. Checkout repository code
         uses: actions/checkout@v4
       
-      - name: Set up Python
+      - name: 2. Set up Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: 3. Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pylint
-          # 프로젝트 루트에 requirements.txt가 있다면 설치합니다.
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       
-      - name: Generate Pylint Log File
+      - name: 4. Run Pylint and generate log
         run: |
           echo "--- Finding all python files in src directory ---"
           find src -name "*.py" -print0 > python_files.list
-          cat python_files.list | xargs -0 echo
-          echo "--- Running Pylint on found files ---"
+          echo "--- Running Pylint on the following files: ---"
+          cat python_files.list | xargs -0 -n1 # 파일 목록을 한 줄씩 출력
+          
           # xargs를 사용해 목록에 있는 파일들을 Pylint로 전달합니다.
           # || true 덕분에 점수가 낮아도 이 단계는 항상 성공으로 처리됩니다.
-          xargs -0 pylint --rcfile=./.pylintrc \
-            --disable=E0401,C0114,C0116,R0903 \
-            < python_files.list > pylint-log.txt \
-            || true
+          xargs -0 pylint --rcfile=./.pylintrc < python_files.list > pylint-log.txt || true
       
-      - name: Upload Pylint Log
+      - name: 5. Upload Pylint log as artifact
         uses: actions/upload-artifact@v4
         with:
           name: pylint-log
           path: pylint-log.txt
 
-  # 2. 빌드 및 테스트 작업
+  # ====================================================================
+  # 잡 2: 빌드 및 테스트 (핵심 기능 검증)
+  # ====================================================================
   build-and-test:
-    needs: linting # linting 작업이 성공해야 이 작업이 실행됩니다.
+    name: ROS2 Build and Test
+    needs: linting # linting 잡이 성공해야 이 잡이 실행됩니다.
     runs-on: ubuntu-22.04
     steps:
-      - name: Checkout repository
+      - name: 1. Checkout repository code
         uses: actions/checkout@v4
 
-      - name: Set up ROS 2
+      - name: 2. Set up ROS 2 Humble
         uses: ros-tooling/setup-ros@v0.7
         with:
           required-ros-distributions: humble
 
-      - name: Install dependencies
+      - name: 3. Install ROS dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-rosdep xvfb
           sudo rosdep init || true
           rosdep update
+          # -r 옵션: 일부 의존성 설치에 실패해도 계속 진행
           rosdep install --from-paths src --ignore-src -y -r --rosdistro humble
 
-      - name: Start virtual framebuffer
+      - name: 4. Start virtual display for GUI tests
         run: Xvfb :99 -screen 0 1024x768x16 &
 
-      - name: Build and Run All Tests
+      - name: 5. Build and Run tests with colcon
         env:
+          # 가상 디스플레이를 사용하도록 환경 변수 설정
           DISPLAY: ":99"
         run: |
+          # ROS2 환경 활성화
           source /opt/ros/humble/setup.bash
           
-          echo "--- Starting build ---"
-          colcon build --packages-select picar_pkg
+          echo "--- Starting build for my_robot_pkg ---"
+          colcon build --packages-select my_robot_pkg
           
-          echo "--- Starting test ---"
+          echo "--- Starting tests for my_robot_pkg ---"
+          # 빌드 후 생성된 환경을 다시 활성화
           source install/setup.bash
-          colcon test --packages-select picar_pkg --event-handlers console_direct+
+          colcon test --packages-select my_robot_pkg --event-handlers console_direct+
 
-      - name: Upload Build Artifacts
+      - name: 6. Upload build/test logs as artifact
+        # 테스트가 실패해도 로그 분석을 위해 아티팩트는 항상 업로드합니다.
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: build-output
+          name: build-and-test-logs
           path: |
             build/
             install/
