--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,14 @@ jobs:
           sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
           sudo apt-get update
-          sudo apt-get install -y python3-rosdep xvfb
+          
+          # ▼▼▼▼▼ 이 줄이 핵심입니다! colcon을 포함한 개발 도구를 설치합니다. ▼▼▼▼▼
+          sudo apt-get install -y ros-dev-tools xvfb
+          # ▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲▲
+
           sudo rosdep init || true
           rosdep update
           rosdep install --from-paths src --ignore-src -y -r --rosdistro humble
-
       - name: 7. Start virtual display
         run: Xvfb :99 -screen 0 1024x768x16 &
 
